[package]
name = "para-onboarding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] } # cli
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
scale = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
subxt = "0.29.0" 
dotenv = "0.15.0" # for secret variables
sp-keyring = "24.0.0"